# SensorFusionCpp

./: .gitignore  CMakeLists.txt  MotionModels.cpp  SensorFusion.cpp  SensorModels.cpp  Sensorfusion.cpp  helloworld.cpp
include/: KalmanFilter.hpp  MiscFunctions.hpp  MotionData.hpp  MotionModel.hpp  SensorModel.hpp
pythonProject/: PlotData.py
src/: KalmanFilter.cpp  MiscFunctions.cpp  MotionData.cpp  MotionModel.cpp  SensorFusion.cpp  SensorModel.cpp  main.cpp
